--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
 </nav>
  </header>
  
+ <!--------section ---------->
  <section>
+  <img src="./images/section_cover.png" alt="leaves" class="cover">
+
+  <article>
+
+    <h1 class="h-article">Bersama Lindungi Bumi</h1>
+
+    <p class="p-article">Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita.</p>
+
+
+    <button class="b-article">Read More</button>
+
+  </article>
 
  </section>
 
