--- a/index.html
+++ b/index.html
@@ -1,57 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="./images/tree-logo.svg" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <title>home page</title>
-</head>
-<body>
-  <!--------- header --------->
- <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/tree-logo.svg"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>home page</title>
+  </head>
+  
+  <body>
+    <!--------- header --------->
+    <header>
+      <a href="./index.html" class="logo-link"
+        ><img src="./images/tree-logo.svg" alt="logo" class="logo"
+      /></a>
 
-<a href="./index.html" class="logo-link"><img src="./images/tree-logo.svg" alt="logo" class="logo"></a>
+      <nav class="header-nav">
+        <ul>
+          <li class="header-li">
+            <a href="./index.html" class="active limarg">Home</a>
+          </li>
+          <li class="header-li">
+            <a href="#" class="inactive limarg">Post</a>
+          </li>
+          <li class="header-li">
+            <a href="#" class="inactive">Newsletter</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-<nav class="header-nav">
- <ul>
-  <li class="header-li">
-    <a href="./index.html" class="active limarg">Home</a>
-  </li>
-  <li class="header-li">
-    <a href="#" class="inactive limarg">Post</a>
-  </li>
-  <li class="header-li">
-    <a href="#" class="inactive">Newsletter</a>
-  </li>
- </ul>
-</nav>
- </header>
- 
- <!--------section ---------->
- <section>
-  <img src="./images/section_cover.png" alt="leaves" class="cover">
+    <!--------section ---------->
+    <section>
+      <img src="./images/section_cover.png" alt="leaves" class="cover" />
 
-  <article>
+      <article>
+        <h1 class="h-article">Bersama Lindungi Bumi</h1>
 
-    <h1 class="h-article">Bersama Lindungi Bumi</h1>
+        <p class="p-article">
+          Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan
+          dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami
+          bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia
+          yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi
+          untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang
+          lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk
+          menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih
+          indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam
+          lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan
+          asri untuk kita.
+        </p>
 
-    <p class="p-article">Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon  dan menciptakan dunia yang lebih indah dan asri untuk kita.</p>
+        <button class="b-article">Read More</button>
+      </article>
+    </section>
 
+    <!-------- footer --------->
 
-    <button class="b-article">Read More</button>
+    <footer>
+      <h1 class="h-footer">Follow us</h1>
 
-  </article>
+      <ul>
+        <li class="li-footer lifootmarg">
+          <a href="https://www.tiktok.com/explore" class="soc-link"
+            ><img src="./images/DESIGN.svg" alt="tiktok" class="soc"
+          /></a>
+        </li>
 
- </section>
+        <li class="li-footer lifootmarg">
+          <a href="https://www.instagram.com/" class="soc-link"
+            ><img src="./images/DESIGN (1).svg" alt="instagram" class="soc"
+          /></a>
+        </li>
 
- <footer>
+        <li class="li-footer lifootmarg">
+          <a href="https://x.com/" class="soc-link"
+            ><img src="./images/Layer_1.svg" alt="x" class="soc"
+          /></a>
+        </li>
 
- </footer>
-
-</body>
+        <li class="li-footer">
+          <a href="https://www.pinterest.com/" class="soc-link"
+            ><img src="./images/DESIGN (2).svg" alt="pinterest" class="soc"
+          /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
